Fix double scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -263,11 +263,13 @@
     width: 100%;
     height: 100%;
     overflow-x: hidden;
+    overflow-y: auto;
   }
   
   #root {
     width: 100%;
-    min-height: 100vh;
+    height: 100vh;
+    overflow: hidden;
   }
   
   h1, h2, h3, h4, h5, h6 {
